Added Enemy Behaviour (bugs fixed)

--- a/v0.1/index.html
+++ b/v0.1/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/GAME DEV.loader.js";
       var config = {
-        dataUrl: buildUrl + "/GAME DEV.data.gz",
-        frameworkUrl: buildUrl + "/GAME DEV.framework.js.gz",
-        codeUrl: buildUrl + "/GAME DEV.wasm.gz",
+        dataUrl: buildUrl + "/GAME DEV.data",
+        frameworkUrl: buildUrl + "/GAME DEV.framework.js",
+        codeUrl: buildUrl + "/GAME DEV.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Tower Defence",
